AssignmtDataLoader1/src/objects/Uncle__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Select City</inlineHelpText>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gwalior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajkot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haidrabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pune</fullName>
                <color>#FF9966</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <label>percent</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>sum__c</fullName>
        <inlineHelpText>rolllup</inlineHelpText>
        <label>sum</label>
        <summarizedField>Child__c.CreatedDate</summarizedField>
        <summaryForeignKey>Child__c.Uncle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Uncle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Step Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uncles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>